# arcagrad

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  deny.toml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-body-template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  plugin.yml
.github/workflows/: ci.yml  client.yml  image.yml  publish-sdk.yml
client/: LICENSE  package-lock.json  package.json
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
docs/plugins/: README.md  authoring-plugins.md
migrations/: 0001_core.sql  0002_tags.sql  0003_series.sql  0004_recommendations.sql  0005_plugins.sql
plugin-sdk/: Cargo.toml  README.md
plugin-sdk/src/: contract.rs  guest.rs  lib.rs  manifest.rs  repo.rs  validation.rs
plugins/anilist/: Cargo.toml  README.md
plugins/anilist/src/: lib.rs
plugins/comicvine/: Cargo.toml  README.md
plugins/comicvine/src/: lib.rs
plugins/gutenberg/: Cargo.toml  README.md
plugins/gutenberg/src/: lib.rs
plugins/marxists/: Cargo.toml  README.md
plugins/marxists/src/: lib.rs
plugins/openlibrary/: Cargo.toml  README.md
plugins/openlibrary/src/: lib.rs
plugins/viz/: Cargo.toml  README.md
plugins/viz/src/: lib.rs
scripts/: make_fake_content.py  version.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: _headers  robots.txt
site/scripts/: audit-dist.mjs
site/src/components/: Header.astro
site/src/content/docs/: administration.mdx
site/src/content/docs/getting-started/: configuration.mdx  install.mdx  introduction.mdx
site/src/content/docs/guides/: organizing-your-library.mdx  plugins.mdx  using-arcagrad.mdx
site/src/content/docs/reference/: api.md
site/src/pages/: download.astro  index.astro
site/src/styles/: custom.css
src/: lib.rs  main.rs
src/intelligence/: mod.rs  recommend.rs  search.rs  stats.rs
src/media/: archive.rs  chapters.rs  comicinfo.rs  epub.rs  fingerprint.rs  format.rs  identity.rs  library.rs  mod.rs  pages.rs  rar.rs  reader.rs  series.rs  thumbnail.rs  title.rs
src/plugins/: browse_cache.rs  calendar.rs  marketplace.rs  mod.rs  plugin_index.rs  plugin_store.rs  scraper.rs  wasm_host.rs
src/repo/: catalog.rs  follows.rs  items.rs  mod.rs  plugins.rs  recommend.rs  series.rs  tags.rs  test_util.rs
src/routes/: admin.rs  auth.rs  browse.rs  calendar.rs  follows.rs  items.rs  library.rs  media.rs  mod.rs  plugins.rs  profile.rs  recommend.rs  search.rs  series.rs  settings.rs  users.rs
src/scanner/: decide.rs  mod.rs  series.rs  test_util.rs  walk.rs  watcher.rs
src/server/: auth.rs  comments.rs  config.rs  db.rs  error.rs  jobs.rs  metrics.rs  mod.rs  stat_lru.rs  web.rs
tests/: plugin_store.rs
tests/api/: integration.rs  openapi.rs
tests/db/: concurrency.rs
tests/plugins/: external.rs
web/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.js
web/scripts/: fetch-fonts.py
web/src/: app.css  app.html  fonts.css
web/src/lib/: accent.js  api.js  artworkPalette.js  cards.js  downloads.js  format.js  grid.js  kinds.js  librarySearch.js  navStack.js  sanitize.js  seriesHint.js  session.js  tags.js  tagstats.js  theme.js  updates.js
web/src/lib/browse/: BrowseCard.svelte  SourceBrowse.svelte  SourcePreview.svelte  coverwarm.js
web/src/lib/components/: ArtworkBackdrop.svelte  ChapterGrid.svelte  Comments.svelte  CoverThumbnail.svelte  Description.svelte  DesktopUpdate.svelte  DownloadBubble.svelte  EditMetadataModal.svelte  FavCount.svelte  IdentifyModal.svelte  MetadataModal.svelte  PageThumbGrid.svelte  PreviewShell.svelte  PreviewTitleMetadata.svelte  ReadingModeToggle.svelte  ReflowableOverview.svelte  ScheduleFooter.svelte  ScoreBadge.svelte  TagRows.svelte  TrackerModal.svelte  TypographicCover.svelte
web/src/lib/components/ui/: DeleteConfirm.svelte  Dropdown.svelte  EmptyState.svelte  Loading.svelte  Modal.svelte  PageHeader.svelte  Pagination.svelte  ProgressMeter.svelte  Shelf.svelte  SortControl.svelte  StarRating.svelte
web/src/lib/follows/: FollowingPage.svelte  store.js
web/src/lib/layout/: Sidebar.svelte
web/src/lib/plugins/: InstallSheet.svelte  PluginDetail.svelte  PluginStore.svelte  catalog.js  common.js
web/src/lib/profile/: DisplaySettings.svelte  Profile.svelte
web/src/lib/reader/: PagedReader.svelte  ReaderChrome.svelte  ReflowableReader.svelte  VerticalReader.svelte
web/src/lib/settings/: AccountsTable.svelte  ServerHealth.svelte  ServerManagement.svelte  Users.svelte
web/src/lib/stats/: StatsView.svelte
web/src/lib/tags/: TagsView.svelte
web/src/lib/tracking/: TrackedSeriesPage.svelte  TrackingPage.svelte
web/src/lib/upcoming/: UpcomingPage.svelte
web/src/routes/: +layout.svelte
web/src/routes/(app)/: +layout.svelte  +page.svelte
web/src/routes/(app)/[kind]/: +page.svelte
web/src/routes/(app)/[kind]/browse/: +page.svelte
web/src/routes/(app)/[kind]/for-you/: +page.svelte
web/src/routes/(app)/[kind]/tags/: +page.svelte
web/src/routes/(app)/for-you/: +page.svelte
web/src/routes/(app)/plugins/: +page.svelte
web/src/routes/(app)/plugins/[id]/: +page.svelte
web/src/routes/(app)/server/: +page.svelte
web/src/routes/(app)/tracking/: +page.svelte
web/src/routes/(app)/upload/: +page.svelte
web/src/routes/item/[id]/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/reader/[id]/: +page.svelte
web/src/routes/series/[id]/: +page.svelte
web/src/routes/source/[plugin]/[ref]/: +page.svelte
web/src/routes/source/[plugin]/[ref]/read/: +page.svelte
