[package]
name = "arcagrad-plugin-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Shared wire contract for arcagrad WASM plugins"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
semver = { version = "1", optional = true }
url = { version = "2", optional = true }
# OpenAPI derives used by the server.
utoipa = { version = "5", optional = true }
# Extism host-call helpers used by WASM guests.
extism-pdk = { version = "1.4", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
validation = ["dep:serde_json", "dep:semver", "dep:url"]
schema = ["dep:utoipa"]
guest = ["dep:extism-pdk", "dep:serde_json"]
