[package]
name = "arcagrad-client"
version = "0.1.0"
description = "Native client for arcagrad"
authors = ["arcagrad"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# The client has its own lockfile and workspace root.
[workspace]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
# Each desktop target enables its native keyring backend below.
keyring = { version = "3", default-features = false }
hostname = "0.4"
tokio = { version = "1", features = ["fs", "io-util"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Lets CSS safe-area insets control the mobile webview edges.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-ios-webview-insets = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
