[package]
name = "gutenberg"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arcagrad-plugin-sdk = { path = "../../plugin-sdk", features = ["guest"] }
extism-pdk = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.21"

[dev-dependencies]
arcagrad-plugin-sdk = { path = "../../plugin-sdk", features = ["guest", "validation"] }

[profile.release]
opt-level = "s"
strip = true
